@@ -438,6 +438,7 @@ Release 0.92.0 - Unreleased
    HBASE-4690  Intermittent TestRegionServerCoprocessorExceptionWithAbort failure
    HBASE-4518  TestServerCustomProtocol fails intermittently
    HBASE-4778  Don't ignore corrupt StoreFiles when opening a region
+   HBASE-4790  Occasional TestDistributedLogSplitting failure (Jinchao)
 
   IMPROVEMENTS
    HBASE-3290  Max Compaction Size (Nicolas Spiegelberg via Stack)  
